# DE_Hackathon_USA_College_Info

./: .gitignore  Dockerfile  README.md  auth.py  config.py  extract.py  load.py  load_to_dir.py  main.py  pyproject.toml  requirements.txt  transform.py
.github/workflows/: container_registry.yml  linting.yml  pipeline.yml  terraform.yml
ELT/: config.py  transform.py
dags/: top_1000_usa_schools.py
database/: db_setup.py  utils.py
include/ELT/: auth.py  config.py  extract.py  load.py  transform.py
include/ELT/database/: db_setup.py
include/dag_context/: main.py
terraform/: backend.tf  main.tf  main.tfplan  provider.tf  variables.tf
terraform/container_registry/: main.tf  variables.tf
terraform/postgresdb/: main.tf  variables.tf
