[project]
name = "de-hackathon-usa-college-info"
version = "0.1.0"
description = "A data pipeline that automates the extraction, transformation, and storage of university-related information from the USA College Scorecard\u001b[D\u001b[a"
authors = [
    {name = "ioaviator",email = "ioaviator@mail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "polars (>=1.26.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
